I added in a grid system so that particles no longer fall behind eachotehr but on top of eachother forming piles, I also added a new bubble class

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ input[type="range"] {
     justify-content: center;
     align-items: center;
     gap: 6px;
+    position: relative;
 }
 
 .section .arrow {
@@ -113,8 +114,12 @@ input[type="range"] {
 }
 
 .section::after {
+    position: absolute;
+    bottom: -6px;
+    left: 20%;
+    width: 60%;
+    pointer-events: none;
     content: "";
-    display: block;
     width: 60%;
     height: 1px;
     background: rgba(0, 0, 0, 0.2);
